--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,24 +4,7 @@
     padding-bottom: 94px;
 }
 
-.team-list {
-    display: flex;
-    margin-left: -30px;
-    /* justify-content: space-between; */
-}
-
-.team-member {
-    background-color: var(--basic-bgc);
-    flex-basis: calc(100% / 4 - 30px);
-    margin-left: 30px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
-}
-
-.team-title {
+.team__title {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -29,12 +12,27 @@
     margin-bottom: 50px;
 }
 
-.team-info {
+.members {
+    display: flex;
+    margin-left: -30px;
+}
+
+.members__card {
+    background-color: var(--basic-bgc);
+    flex-basis: calc(100% / 4 - 30px);
+    margin-left: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.members__info {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.team-name {
+.members__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -43,7 +41,7 @@
     margin-bottom: 10px;
 }
 
-.team-position {
+.members__position {
     color: var(--second-text-color);
     font-weight: 400;
     font-size: 16px;
@@ -52,16 +50,16 @@
     letter-spacing: 0.03em;
     margin-bottom: 16px;
 }
-.team-soc-list {
+.member-soc-list {
     display: flex;
     justify-content: center;
 }
 
-.team-soc-item:not(:last-child) {
+.member-soc-list__item:not(:last-child) {
     margin-right: 10px;
 }
 
-.team-soc-link{
+.member-soc-list__link{
     width: 44px;
     height: 44px;
     background-color: var(--basic-bgc);
@@ -76,7 +74,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-soc-link:hover, .team-soc-link:focus {
+.member-soc-list__link:hover, .member-soc-list__link:focus {
     background-color: var(--color-accent);
     fill: var(--basic-bgc)
 }
