--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -2,17 +2,17 @@
     padding-top: 94px;
 }
 
-.advantage-list {display: flex;}
+.advantage__list {display: flex;}
 
-.advantage-item:not(:last-child) {
+.advantage__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.advantage-item{
+.advantage__item{
     width: 270px;
 }
 
-.advantage-item::before {
+.advantage__item::before {
     display: block;
     content: "";
     height: 120px;
@@ -38,7 +38,7 @@
     background-image: url('../images/icon4_astronaut.svg');
 }
 
-.advantage-heading {
+.advantage__heading {
     text-transform: uppercase;
     font-size: 14px;
     line-height: 1.14;
@@ -48,7 +48,7 @@
     margin-top: 30px;
 }
 
-.advantage-text {
+.advantage__text {
     color: var(--second-text-color);
     font-size: 14px;
     line-height: 1.71;
