--- a/sass/layout/_foto.scss
+++ b/sass/layout/_foto.scss
@@ -3,7 +3,7 @@
     padding-bottom: 94px;
 }
 
-.foto-title {
+.foto__title {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -11,16 +11,16 @@
     margin-bottom: 50px;
 }
 
-.foto-list {
+.foto__list {
     display: flex;
     justify-content: space-between;
 }
 
-.foto-item{
+.foto__item{
     position: relative;
 }
 
-.foto-box{
+.foto__box{
     display: flex;
     width: 100%;
     height: 70px;
@@ -35,7 +35,7 @@
 }
 
 
-.foto-text{
+.foto__text{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
