--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,49 +1,39 @@
 .clients{
     padding-top: 94px;
     padding-bottom: 94px;
-}
-
-.clients__title{
-    color: var(--text-color);
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
+    &__title{
+        color: var(--text-color);
+        font-size: 36px;
+        line-height: 1.17;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-bottom: 50px;
+    }
 }
 
 .clients-list{
     display: flex;
     justify-content: center;
-}
-
-.clients-list__item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.clients-list__link{
-    width: 170px;
-    height: 92px;
-    border: 1px solid #AFB1B8;
-    box-sizing: border-box;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    fill: #AFB1B8;
-
-    transition-property: border, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.clients-list__logo {
-    fill: #AFB1B8;
-}
-
-.clients-list__link:hover, .clients-list__link:focus{
-    fill: var(--color-accent);
-    border: 1px solid var(--color-accent);
+    &__link{
+        width: 170px;
+        height: 92px;
+        border: 1px solid #AFB1B8;
+        box-sizing: border-box;
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        fill: #AFB1B8;
+        transition-property: border, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover, &:focus{
+            fill: var(--color-accent);
+            border: 1px solid var(--color-accent);
+        }
+    }
+    &__item:not(:last-child) {
+        margin-right: 30px;
+    }
 }
