--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,7 +8,6 @@
     display: flex;
     align-items: center;
     justify-content: center; 
-
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -17,14 +16,12 @@
     min-height: 581px;
     background: #FFFFFF;
     position: absolute;
-
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: rotateX(0);
     padding: 40px;
-}
-
-.backdrop.is-hidden .modal {
-    transform: rotateX(90deg);
+    .backdrop.is-hidden & {
+        transform: rotateX(90deg);
+    }    
 }
 
 .modal-close-btn{
@@ -33,21 +30,17 @@
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-
     position: absolute;
     top: 8px;
     right: 8px;
-
     display: flex;
     align-items: center;
     justify-content: space-around;
     align-content: space-around;
-
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-btn:hover, .modal-close-btn:focus{
-    fill: var(--color-button);
+    &:hover, &:focus{
+        fill: var(--color-button);
+    }
 }
 
 .is-hidden{
@@ -83,21 +76,14 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     width: 100%;
-
     height: 40px;
     padding-left: 42px;
     cursor: pointer;
     outline: none;
-
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:hover, .modal-input:focus{
-    border-color: var(--color-accent);
-}
-
-.modal-input:hover + .input-icon, .modal-input:focus + .input-icon{
-    fill: var(--color-accent);
+    &:hover, &:focus{
+        border-color: var(--color-accent);
+    }
 }
 
 .modal-input-wrap{
@@ -110,6 +96,9 @@
     top: 50%;
     transform: translateY(-50%);
     fill: #212121;
+    .modal-input:hover + &, .modal-input:focus + &{
+        fill: var(--color-accent);
+    }
 }
 
 .user-comment{
@@ -117,8 +106,6 @@
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-
-
     font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
@@ -127,14 +114,12 @@
     height: 120px;
     padding: 12px 16px;
     outline: none;
-
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus{
+        border-color: var(--color-accent);
+    }
 }
 
-
-.user-comment:hover, .user-comment:focus{
-    border-color: var(--color-accent);
-}
 
 .label-accept{
     font-weight: 400;
@@ -145,29 +130,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-}
-
-.label-accept::before{
-    content: '';
-    width: 16px;
-    height: 15px;
-    border: 2px solid #000000;
-    border-radius: 3px;
-    margin-right: 8px;
-
-}
-
-.input-accept:checked + .label-accept::before{
-    background-color: var(--color-accent);
-    border: none;
-    background-image: url(../images/Vector.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.input-accept:focus + .label-accept::before{
-    border-color: var(--color-accent);
+    &::before{
+        content: '';
+        width: 16px;
+        height: 15px;
+        border: 2px solid #000000;
+        border-radius: 3px;
+        margin-right: 8px;
+        .input-accept:checked + &{
+            background-color: var(--color-accent);
+            border: none;
+            background-image: url(../images/Vector.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        .input-accept:focus + &{
+            border-color: var(--color-accent);
+        }
+    }
 }
 
 .accept-link{
@@ -177,7 +157,6 @@
 .accept-box{
     margin-bottom: 30px;
 }
-
 
 .btn-submit{
     color: var(--text-color-light);
