--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -1,25 +1,36 @@
 .advantage {
     padding-top: 94px;
-}
-
-.advantage__list {display: flex;}
-
-.advantage__item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.advantage__item{
-    width: 270px;
-}
-
-.advantage__item::before {
-    display: block;
-    content: "";
-    height: 120px;
-    background-color: var(--second-bgc);
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 4px;
+    &__list {display: flex;}
+    &__item{
+        width: 270px;
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+        &::before {
+            display: block;
+            content: "";
+            height: 120px;
+            background-color: var(--second-bgc);
+            background-repeat: no-repeat;
+            background-position: center;
+            border-radius: 4px;
+        }
+    }
+    &__heading {
+        text-transform: uppercase;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        margin-top: 30px;
+    }
+    &__text {
+        color: var(--second-text-color);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+    }
 }
 
 .icon-antenna::before{
@@ -36,21 +47,4 @@
 
 .icon-astronaut::before{
     background-image: url('../images/icon4_astronaut.svg');
-}
-
-.advantage__heading {
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    margin-top: 30px;
-}
-
-.advantage__text {
-    color: var(--second-text-color);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
 }
