--- a/sass/layout/_foto.scss
+++ b/sass/layout/_foto.scss
@@ -1,46 +1,43 @@
 .foto {
     padding-top: 94px;
     padding-bottom: 94px;
+    &__title {
+        font-size: 36px;
+        line-height: 1.17;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-bottom: 50px;
+    }
+    &__list {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item{
+        position: relative;
+    }
+    &__box{
+        display: flex;
+        width: 100%;
+        height: 70px;
+        background: rgba(47, 48, 58, 0.8);
+        align-content: space-around;
+        justify-content: space-around;
+        align-items: center;
+
+        position: absolute;
+        left: 0;
+        bottom: 0;
+    }
+    &__text{
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--text-color-light);
+    }
 }
 
-.foto__title {
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
-
-.foto__list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.foto__item{
-    position: relative;
-}
-
-.foto__box{
-    display: flex;
-    width: 100%;
-    height: 70px;
-    background: rgba(47, 48, 58, 0.8);
-    align-content: space-around;
-    justify-content: space-around;
-    align-items: center;
-
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
 
 
-.foto__text{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--text-color-light);
-}
