--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -26,18 +26,16 @@
     cursor: pointer;
     border-radius: 4px;
     padding: 6px 22px;
-
     transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn:hover, .btn:focus {
-    color: var(--text-color-light);
-    background-color: var(--color-button);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
-    0px 1px 2px rgba(0, 0, 0, 0.08), 
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+    &:hover, &:focus {
+        color: var(--text-color-light);
+        background-color: var(--color-button);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+        0px 1px 2px rgba(0, 0, 0, 0.08), 
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
 
@@ -54,12 +52,16 @@
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
-
     position: relative;
-
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+        0px 4px 4px rgba(0, 0, 0, 0.06), 
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+        cursor: pointer;
+    }
 }
 
 .portfolio-text{
@@ -82,19 +84,6 @@
     letter-spacing: 0.03em;
 }
 
-.portfolio-item:hover, .portfolio-item:focus{
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-    0px 4px 4px rgba(0, 0, 0, 0.06), 
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
-}
-
-.portfolio-item:hover .portfolio-text-cover,
-.portfolio-item:focus .portfolio-text-cover {
-    transform: translateY(0);
-}
-
-
 .portfolio-wrap{
     position: relative;
     overflow: hidden;
@@ -111,15 +100,19 @@
     line-height: 1.56;
     letter-spacing: 0.03em;
     align-self: center;
-
     position: absolute;
     left: 0;
     top: 0;
-
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: auto;
+    .portfolio-item:hover &, 
+    .portfolio-item:focus & {
+        transform: translateY(0);
+    }
 }
+
+
 
 
 
